--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=currencyconverter
 server.port=8080
 exchange.api.url=https://api.exchangerate.host/latest
 exchange.api.key=a5e1f7b8e74219663043d98df6a59c18
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+server.error.whitelabel.enabled=false
+
+
